# TINGe

./: .boost  .cuda  CMakeLists.txt  Jambase.Misc  Jamfile  Jamrules  README  README.md  config.h  x-build
data/: 500x500.sif  README
doc/: INSTALL  TODO  tinge.1  tinge.html  tinge.txt
src/: AppConfig.hpp  InputData.hpp  Jamfile  adj_build.cpp  adj_build.hpp  iomanip.cpp  iomanip.hpp  main.cxx  mpi_tags.hpp  read_adj.cpp  read_adj.hpp  read_exp.cpp  read_exp.hpp  read_tfs.cpp  read_tfs.hpp  sort_reduce.hpp  transform_data.cpp  transform_data.hpp  utility.hpp  write_adj.cpp  write_adj.hpp  write_block.hpp  write_lab.cpp  write_lab.hpp
src/jaz/: BSpline.hpp  algorithm_add.hpp  iterator_add.hpp  math_add.hpp  mutual_info.hpp  numeric_table.hpp  plain_array.hpp  stat_util.hpp  string_add.hpp  sys_tools.hpp  utility_add.hpp
src/mpix/: MPI_env.hpp
tools/: Jamfile  adj-compact  adj-consensus  adj-mi2cc  adj-probes  adj-prune  adj-size  adj2lab  adj2sif  dream  exp-select  exp-size  mcl2noa  residuals.cxx  sif-compare  sif2adj
